# Capstone

./: .gitignore  Makefile  README.md  kernel8.img
archive/: Cargo.toml  aarch64-none-elf.json
archive/include/: mini_uart.h  mm.h
archive/include/peripherals/: aux.h  gpio.h
archive/src/: boot.S  config.txt  kernel.c  linker.ld  mm.S
cs140e/assignment-0/blinky/: .gitignore  Makefile
cs140e/assignment-0/blinky/phase3/: blinky.c
cs140e/assignment-0/blinky/phase4/: Cargo.toml
cs140e/assignment-0/blinky/phase4/src/: lang_items.rs  lib.rs
cs140e/assignment-1/shell/ferris-wheel/compile-pass/: feature-1.rs  try.rs
cs140e/assignment-1/shell/ferris-wheel/questions/: borrow-1  const  derive  feature-1  io-read-write  lifetimes-1  lifetimes-2  lifetimes-3  lifetimes-4  modules-1  move  mutability-1  mutability-2  mutability-3  mutability-4  pattern-match-1  privacy  semi  trait-namespace  try
cs140e/assignment-1/shell/ttywrite/: test.sh
cs140e/os/bootloader/: Cargo.toml  Makefile
cs140e/os/bootloader/src/: kmain.rs  lang_items.rs
cs140e/os/kernel/: Cargo.toml  Xargo.toml  build-and-write.sh
cs140e/os/kernel/src/: console.rs  display.rs  kmain.rs  lang_items.rs  mutex.rs  shell.rs
cs140e/os/pi/: Cargo.toml
cs140e/os/pi/src/: gpio.rs  i2c.rs  lib.rs  timer.rs  uart.rs
cs140e/os/std/: Cargo.toml  Xargo.toml
cs140e/os/std/src/: lib.rs
cs140e/os/std/src/io/: mod.rs
docs/: CNAME  index.html
docs/cs140e/: assignment-0.md  assignment-1.md
include/: utils.h
include/peripherals/: base.h
src/: mini_uart.c  utils.S
src/peripherals/: gpio.c
(+14 files in other folders)
