[package]
name = "kernel"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
panic = "abort"
lto = true
debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
pi = { path = "../pi", features = ["std"] }
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"

# from assignment 1
stack-vec = { path = "../../assignment-1/shell/stack-vec/" }
