[package]
name = "pi"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
edition = "2021"

[dependencies]
volatile = { path = "../volatile" }
display-interface-i2c = "0.4.0"
embedded-hal = "0.2.7"

# from assignment 1
stack-vec = { path = "../../assignment-1/shell/stack-vec/" }

[features]
std = []
